--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div id="header">
 			<img src="bolo1.png" id="bolo1">
-			<p>Bolos Gostosos do Carlos</p>
+			<p>Melhores Bolos Gostosos</p>
 			<img src="bolo1.png" id="bolo2">
 		</div>
 
